# Tilk

./: .gitignore  10_dakikada_tilk.md  ARCHITECTURE.md  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RFC-concurrency.md  RFC-paket-yonetimi.md  add_spans.py  fix_spans.py  test_fmt.oz  test_types.oz  tilk_dil_raporu.md  type_error_test.oz
docs/: analiz_raporu.md  dil_spesifikasyonu.md
examples/: ornek10_modul.oz  ornek13_kontrol_akisi.oz  ornek14_elif.oz  ornek1_kosul.oz  ornek2_dongu.oz  ornek3_islev.oz  ornek4_hesap.oz  ornek5_karma.oz  ornek6_hata_yonetimi.oz  ornek7_diziler_haritalar.oz  ornek8_asenkron.oz  ornek9_matematik.oz
fuzz/: Cargo.toml
kullanim_kilavuzu/: 01_giris_ve_tasarim.md  02_sozdizimi_kurallari.md  03_degiskenler_ve_tipler.md  04_kosul_yapilari.md  05_donguler.md  06_islevler_ve_recursion.md  07_diziler_ve_haritalar.md  08_hata_yonetimi_hata_ise.md  09_asenkron_tamamlaninca.md  10_dosya_io_islemleri.md  11_zaman_ve_uyku.md  12_matematik_fonksiyonlari.md  13_lexer_ve_tokenlar.md  14_parser_ve_ast.md  15_tip_kontrol_sistemi.md  16_derleyici_ve_bytecode.md  17_sanal_makine_vm_mimarisi.md  18_slot_index_duzenleme.md  19_short_circuit_mantigi.md  20_escape_dizileri.md  21_ariadne_ve_hata_teshisi.md  22_golden_file_testler.md  23_cicd_pipeline.md  24_c_codegen_makine_kodu.md  25_proje_manifestosu_tilk_toml.md  26_cli_arac_zinciri.md  27_web_playground_arayuzu.md  28_unicode_ve_nfc_normalizasyonu.md  29_gelecek_yol_haritasi.md  (+1 more)
oz-cli/: Cargo.toml
oz-cli/src/: c_codegen.rs  main.rs  tilk_runtime.c  tilk_runtime.h
oz-vm/: Cargo.toml
(+54 files in other folders)
